[project]
name = "pylookyloomonitoring"
version = "1.3.4"
description = "Python API to connect to lookyloo monitoring"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.33.1)",
    "lookyloo-models (>=0.1.7,<0.2.0)"
]

[project.urls]
repository = "https://github.com/Lookyloo/PyLookylooMonitoring"
documentation = "https://pylookyloomonitoring.readthedocs.io/en/latest/index.html"

[tool.poetry]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
lookyloo_monitor= 'pylookyloomonitoring:main'

[project.optional-dependencies]
docs = ["sphinx (>=9.1.0) ; python_version >= \"3.12\""]

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"
mypy = "^1.20.1"
types-requests = "^2.33.0.20260327"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
